--- a/Vista/Vista.csproj
+++ b/Vista/Vista.csproj
@@ -45,6 +45,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmListaReservas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmListaReservas.Designer.cs">
+      <DependentUpon>frmListaReservas.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmLogin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -57,6 +63,18 @@
     <Compile Include="frmMenuGerente.Designer.cs">
       <DependentUpon>frmMenuGerente.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmReporteDiario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmReporteDiario.Designer.cs">
+      <DependentUpon>frmReporteDiario.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmReporteMensual.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmReporteMensual.Designer.cs">
+      <DependentUpon>frmReporteMensual.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmReservarCita.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -65,11 +83,20 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frmListaReservas.resx">
+      <DependentUpon>frmListaReservas.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmMenuGerente.resx">
       <DependentUpon>frmMenuGerente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmReporteDiario.resx">
+      <DependentUpon>frmReporteDiario.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmReporteMensual.resx">
+      <DependentUpon>frmReporteMensual.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmReservarCita.resx">
       <DependentUpon>frmReservarCita.cs</DependentUpon>
