Avance significativo de todo el sistema

--- a/Controlador/Controlador.csproj
+++ b/Controlador/Controlador.csproj
@@ -41,7 +41,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClienteBL.cs" />
+    <Compile Include="PagoBL.cs" />
     <Compile Include="SesionBL.cs" />
+    <Compile Include="TerapeutaBL.cs" />
     <Compile Include="UsuarioBL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
