--- a/Modelo/Modelo.csproj
+++ b/Modelo/Modelo.csproj
@@ -41,7 +41,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cliente.cs" />
+    <Compile Include="Pago.cs" />
     <Compile Include="Sesion.cs" />
+    <Compile Include="Terapeuta.cs" />
     <Compile Include="Usuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
